# computer-vision

./: README.md
Homework_2/: CMakeLists.txt  fourier.cpp  laplacian.cpp
Non-Projects/: Computer Vision in the News.docx  Week 1 Homework.docx  Week 10 Homework.docx  Week 11 Homework.docx  Week 2 Homework.docx  Week 3 Homework.docx  Week 4 Homework.docx  Week 5 Homework.docx  Week 6 Homework.docx  Week 7 Homework.docx
Project_1/: CMakeLists.txt  CMakeSettings.json  DA2Network.hpp  README.md  da2-example.cpp  da2-video.cpp  faceDetect.h  filters.cpp  filters.h  imgDisplay.cpp  test2.cpp  timeBlur.cpp  vidDisplay.cpp
Project_2/: CMakeLists.txt  README.md  baseline_matcher.cpp  baseline_matcher.h  csv_util.cpp  custom.cpp  custom.h  deep_network_embeddings.cpp  deep_network_embeddings.h  faceDetect.h  feature_vector_writer.cpp  feature_vector_writer.h  histogram_matcher.cpp  histogram_matcher.h  texture.cpp  texture.h
Project_3/: CMakeLists.txt  DA2Network.hpp  README.md  csv_util.h  da2-example.cpp  da2-video.cpp  feature_vectors.csv  filters.cpp  filters.h  test.cpp  test2.cpp  vidDisplay.cpp  yolo.cpp
Project_4/: CMakeLists.txt  CMakeSettings.json  DA2Network.hpp  README.md  calibration.cpp  calibration.h  camera_matrix.txt  corners.txt  da2-example.cpp  da2-video.cpp  distortion_coefficients.txt  test2.cpp  vidDisplay.cpp
Project_5/: README.md  build_network.py  examine_network.py  experiment.py  greek_letters.py  mnist_model.pth  read_and_test_network.py
